feat: 録画と通知機能の安定性向上

--- a/templates/nvr-web.nginx.conf
+++ b/templates/nvr-web.nginx.conf
@@ -1,14 +1,14 @@
 
 # NVR Web UI Configuration
-# Include this in your main nginx.conf or sites-enabled/default server block if possible,
-# OR use this as a snippet reference.
-#
-# Since the user requested modifying existing Nginx, this file serves as a reference 
-# to be appended or included.
 
 # Frontend (Static Files)
+location = /nvr {
+    return 301 $scheme://$http_host/nvr/;
+}
+
 location /nvr/ {
     alias /usr/local/bin/nvr/web/frontend/;
+    index index.html;
     try_files $uri $uri/ /nvr/index.html;
 }
 
