--- a/config/main.yaml
+++ b/config/main.yaml
@@ -29,6 +29,11 @@ common:
   default_event_timeout: 10
 
   # -------------------------------------------------------
+  # イベント終了後記録継続時間（秒）
+  # -------------------------------------------------------
+  default_post_motion_buffer_sec: 2
+
+  # -------------------------------------------------------
   # デフォルト昼夜判定方式
   # -------------------------------------------------------
   default_daynight_mode: "brightness"
