--- a/.gitignore
+++ b/.gitignore
@@ -3,28 +3,28 @@ config/secrets/*
 !config/secrets/.gitkeep
 
 # --- OS & IDE (共通) ---
-Thumbs.db          # Windowsのサムネイル
-.vscode/           # VS Codeの設定 (共有したい設定がある場合は中身を選別)
+Thumbs.db
+.vscode/
 
 # --- Python (NVR Backend) ---
-__pycache__/       # コンパイル済みファイル（必須！）
+/web/backend/__pycache__/
 *.pyc
-.venv/             # 仮想環境フォルダ
-venv/
-*.log              # ログファイル
+.venv/
+/web/backend/venv/
+*.log
 
 # --- Node.js / React (Web Frontend) ---
-node_modules/      # 依存ライブラリ（超巨大なので絶対無視！）
-build/             # ビルド出力フォルダ
+node_modules/
+build/
 dist/
 .npm
-*.local            # ローカル環境設定
+*.local
 
 # --- PlatformIO / ESP32 (Embedded) ---
-.pio/              # ビルド成果物やキャッシュ
+.pio/
 .pioenvs/
 
 # --- 重要: 機密情報 ---
-.env               # APIキーやパスワードが入るファイル（絶対コミットしない！）
-keys/              # 証明書など
+.env
+keys/
 *.pem
