--- a/deploy_nvr.conf
+++ b/deploy_nvr.conf
@@ -9,6 +9,6 @@ NVR_USER="nvruser"
 NVR_GROUP="nvruser"
 
 # Installation directories
-NVR_BASE_DIR="/usr/local/bin/nvr"
-NVR_LIB_DIR="/usr/local/lib/nvr"
+NVR_BASE_DIR="/opt/nvr"
+NVR_LIB_DIR="/opt/nvr-lib"
 DAYNIGHT_FILE_DIR="/dev/shm/nvr/daynight_files.d"
